# devops-deploy-with-cli

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
ansible/: inventory.ini  playbook.yml
ansible/roles/webapp/tasks/: deploy.yml  main.yml  rollback.yml  update.yml
cli/: cli.py
cli/commands/: deploy.py  rollback.py  update.py
cli/utils/: execute.py  input_validation.py  logger.py
cli_commands/: base.py  deploy.py  rollback.py  update.py
cli_utils/: execute.py  logger.py
config/: default_config.yml
docker/: Dockerfile
docker/app/: app.py  config.py
test/: test_cli.py  test_logger.py  test_secure.py
utils/: logger.py  secure.py
